edit hotel -page